@@ -1,4 +1,4 @@
-/* $Id: drupal.css,v 1.130 2006-01-06 07:32:54 dries Exp $ */
+/* $Id: drupal.css,v 1.131 2006-01-12 09:58:49 dries Exp $ */
 
 /*
 ** HTML elements
@@ -43,15 +43,15 @@ td.active {
 /*
 ** Menu styles
 */
-.menu {
-  padding: 0 0 0 0.5em;
-}
-.menu ul {
+ul.menu {
   list-style: none;
   border: none;
   text-align:left;
 }
-.menu li a {
+ul.menu li {
+  margin: 0 0 0 0.5em;
+}
+ul.menu li a {
   width: 100%;
   text-decoration: none;
 }
